Fix center aligning of images. (#110)

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ div.thumb2 {
 margin-bottom:.5em;
 padding-right:10px;
 width:auto;
-display:table-cell
+display:block
 }
 
 div.trien {
